# landmark_tools

./: .gitattributes  .gitignore  .gitmodules  CMakeLinkHeaders.cmake  CMakeLists.txt  Doxyfile  INSTALL.md  README.md  RUN.md  requirements.txt
.github/workflows/: test.yml
example/: EarthDemo.ipynb  EnduranceDEM_1.ipynb  Haworth_final_adj_5mpp_surf_config.txt  Lunar_LROnac_Haworth_sfs-dem_1m_v3_config.txt  MoonDemo.ipynb  Rendering.ipynb  custom_parameters.txt  image_comparison_demo.ipynb  make_20210615_UTM.txt  make_20211122_EQRECT.txt
scripts/matlab/: compareStructs.m  make_correlation_visualizations.m  openLMK.m  visualize_corr.m  writeLMK.m
scripts/python/: README.md  pyproject.toml
scripts/python/landmark_tools/: batch_render.py  convert_endian.py  landmark.py  lunar_lambert.osl  mask_by_intensity.py  quiver_plot.py  render_ply.py  simulate_pushbroom_jitter.py  visualize_corr.py
scripts/python/landmark_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/img/: CMakeLists.txt
src/img/utils/: imgutils.h  int_forstner.c
src/landmark_tools/: CMakeLists.txt
src/landmark_tools/data_interpolation/: CMakeLists.txt  cubic_interpolation.c  cubic_interpolation.h  interpolate_data.c  interpolate_data.h
src/landmark_tools/feature_selection/: CMakeLists.txt  int_forstner_extended.c  int_forstner_extended.h
src/landmark_tools/feature_tracking/: CMakeLists.txt  corr_image_long.c  corr_image_long.h  correlation_results.c  correlation_results.h  feature_match.c  feature_match.h  parameters.c  parameters.h
src/landmark_tools/image_io/: CMakeLists.txt  geotiff_interface.c  geotiff_interface.h  geotiff_struct.h  image_utils.c  image_utils.h  imagedraw.c  imagedraw.h
src/landmark_tools/landmark_registration/: CMakeLists.txt  landmark_registration.c  landmark_registration.h
src/landmark_tools/landmark_util/: CMakeLists.txt  create_landmark.c  create_landmark.h  estimate_homography.c  estimate_homography.h  landmark.c  landmark.h  point_cloud2grid.c  point_cloud2grid.h
src/landmark_tools/map_projection/: CMakeLists.txt  datum_conversion.c  datum_conversion.h  equidistant_cylindrical_projection.c  equidistant_cylindrical_projection.h  lambert.c  lambert.h  orthographic_projection.c  orthographic_projection.h  stereographic_projection.c  stereographic_projection.h  utm.c  utm.h
src/landmark_tools/math/: CMakeLists.txt  double_matrix.c  double_matrix.h  homography_util.c  homography_util.h  math_constants.h  math_utils.c  math_utils.h  point_line_plane_util.c  point_line_plane_util.h
src/landmark_tools/opencv_tools/: CMakeLists.txt  feature_matching_2d.c  feature_matching_2d.h  homography_estimation.c  homography_estimation.h  homography_match_method.c  homography_match_method.h  opencv_feature_matching.cpp  opencv_feature_matching.h  opencv_image_io.cpp  opencv_image_io.h
src/landmark_tools/utils/: CMakeLists.txt  endian_read_write.c  endian_read_write.h  parse_args.c  parse_args.h  safe_string.h  two_level_yaml_parser.c  two_level_yaml_parser.h  write_array.c  write_array.h
src/main/: XYZID_2_point_main.c  add_srm_main.c  create_landmark_from_img_main.c  create_landmark_main.c  distort_landmark_main.c  edit_landmark_main.c  image_comparison_main.c  landmark_2_point_main.c  landmark_comparison_main.c  landmark_registration_main.c  point_2_landmark_main.c
src/math/: CMakeLists.txt
src/math/mat3/: mat3.c  mat3.h
tests/: Distortion Correlation Impact.ipynb  make_UTM_lmk.txt  make_equal_rectangular_lmk.txt  make_polar_stereo_lmk.txt  regression_test.ipynb  test_create_landmark.py  test_distort_landmark.py  test_edit_landmark.py  test_helpers.py  test_image_comparison.py  test_landmark_comparison.py  test_landmark_registration.py  test_point_to_landmark.py  test_render_ply.py  unit_tests.ipynb
tests/cpp/: CMakeLists.txt
tests/cpp/unit_tests/: landmark_test.cpp
tests/gold_standard_data/: 1118_1118_gray.pgm  1311_938_gray.pgm  Haworth_final_adj_5mpp_surf_tif_rendered.lmk  README.md  UTM_WY.hdr  UTM_WY.lmk  UTM_WY.lmk.pgm  UTM_WY.lmk.txt  UTM_WY.lmk_500by500.raw  UTM_WY.lmk_demo.lmk  UTM_WY.lmk_demo.pgm  UTM_WY.raw  UTM_WY.raw.aux.xml  UTM_WY.tif  base.ply  comparison_corr_500by500.raw  comparison_delta_x_500by500.raw  comparison_delta_y_500by500.raw  comparison_delta_z_500by500.raw  equal_rectangular_WY.hdr  equal_rectangular_WY.lmk  equal_rectangular_WY.lmk.ply  equal_rectangular_WY.lmk_500by500.raw  equal_rectangular_WY.lmk_demo.lmk  equal_rectangular_WY.lmk_demo.lmk.txt  equal_rectangular_WY.lmk_demo.pgm  equal_rectangular_WY.raw  equal_rectangular_WY.raw.aux.xml  equal_rectangular_WY.tif  final_3d_points.txt  hillshade_intensity.pgm  hillshade_mask.pgm  image_comparison_corr_1000by1000.raw  image_comparison_delta_x_1000by1000.raw  image_comparison_delta_y_1000by1000.raw  kaguya_intensity.pgm  kaguya_mask.pgm  make_UTM_lmk.txt  make_equal_rectangular.txt  make_polar_stereo_lmk.txt  (+11 more)
tests/unit_test_data/: UTM_WY_1.lmk  UTM_WY_2.lmk  UTM_WY_3.lmk
