add_subdirectory(${CMAKE_SOURCE_DIR}/src/landmark_tools/data_interpolation)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/landmark_tools/feature_selection)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/landmark_tools/feature_tracking)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/landmark_tools/image_io)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/landmark_tools/landmark_util)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/landmark_tools/map_projection)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/landmark_tools/math)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/landmark_tools/opencv_tools)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/landmark_tools/utils)