add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/data_interpolation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/feature_selection)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/feature_tracking)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/image_io)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/landmark_util)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/map_projection)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/math)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/opencv_tools)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utils)